--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <!-- /Nos destinations -->
 
     <!-- Footer -->
-    <footer class="menu mt-4 px-3 pt-5 pb-3">
+    <footer class="menu mt-4 px-3 pt-5 pb-3 text-center">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-4 col-lg-4">
