--- a/reserver.html
+++ b/reserver.html
@@ -238,7 +238,7 @@
         <!-- /reservation -->
 
         <!-- Footer -->
-        <footer class="menu mt-4 px-3 pt-5 pb-3">
+        <footer class="menu mt-4 px-3 pt-5 pb-3 text-center">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 col-md-4 col-lg-4">
@@ -299,14 +299,6 @@
     <script src="./vendors/jquery/jquery-3.6.1.min.js"></script>
     <script src="./vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="./js/main.js"></script>
-    <script>
-        function sectionTotal(){
-            var passager = document.getElementById("passager").value;
-            var price = document.getElementById("price").value;
-            document.getElementById("nbr_passager").innerHTML = passager;
-            document.getElementById("total_reservation").innerHTML = passager * price;
-        }
-    </script>
 </body>
 
 </html>
