--- a/contact.html
+++ b/contact.html
@@ -116,10 +116,10 @@
             </div>
           </div>
         </div>
-        <div class="col-md-12 col-sm-12 mt-4">
-          <div class="row">
+        <div class="col-md-12 col-sm-12 mt-3">
+          <div class="row text-center">
             <div class="col-md-6 col-sm-12">
-              <div class="address mt-4">
+              <div class="address mt-1">
                 <div class="min-title">
                   ZOE T & L Pointe-Noire
                 </div>
@@ -130,7 +130,7 @@
               </div>
             </div>
             <div class="col-md-6 col-sm-12">
-              <div class="address mt-4">
+              <div class="address mt-1">
                 <div class="min-title">
                   ZOE T & L Brazzaville
                 </div>
@@ -147,7 +147,7 @@
     <!-- /Contact -->
 
     <!-- Footer -->
-    <footer class="menu mt-4 px-3 pt-5 pb-3">
+    <footer class="menu mt-4 px-3 pt-5 pb-3 text-center">
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-4 col-lg-4">
