--- a/nos-tarifs.html
+++ b/nos-tarifs.html
@@ -67,7 +67,7 @@
             <div class="tarifs">
                 <div class="box-tarif">
                     <div class="thum">
-                        <img src="img/destination/brazzaville.jpg" alt="">
+                        <img src="img/destination/paysage_2.jpg" alt="">
                     </div>
                     <div class="tarif-content">
                         <div class="location">
@@ -81,7 +81,7 @@
                 </div>
                 <div class="box-tarif">
                     <div class="thum">
-                        <img src="img/destination/brazzaville.jpg" alt="">
+                        <img src="img/destination/dolisie.jpg" alt="">
                     </div>
                     <div class="tarif-content">
                         <div class="location">
@@ -95,7 +95,7 @@
                 </div>
                 <div class="box-tarif">
                     <div class="thum">
-                        <img src="img/destination/brazzaville.jpg" alt="">
+                        <img src="img/destination/kinkala.jpg" alt="">
                     </div>
                     <div class="tarif-content">
                         <div class="location">
@@ -109,7 +109,7 @@
                 </div>
                 <div class="box-tarif">
                     <div class="thum">
-                        <img src="img/destination/brazzaville.jpg" alt="">
+                        <img src="img/destination/oyo.jpg" alt="">
                     </div>
                     <div class="tarif-content">
                         <div class="location">
